--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <img id="anim" src="./assets/img/anim.png" alt="hrana">
         </div>
         <div class="box-container">
-            <div class="box" data-aos="fade-right">
+            <div class="box">
                 <div class="img">
                     <img src="./assets/img/hrana1.jpg" alt="hrana">
                 </div>
@@ -163,7 +163,7 @@
                 </div>
                 <button class="btn"></button>
             </div>
-            <div class="box" data-aos="fade-left">
+            <div class="box">
                 <div class="img">
                     <img src="./assets/img/junetinna.png" alt="hrana">
                 </div>
@@ -182,7 +182,7 @@
                 </div>
                 <button class="btn"></button>
             </div>
-            <div class="box" data-aos="fade-right">
+            <div class="box">
                 <div class="img">
                     <img src="./assets/img/juha.jpg" alt="hrana">
                 </div>
@@ -195,7 +195,7 @@
                 </div>
                 <button class="btn"></button>
             </div>
-            <div class="box" data-aos="fade-left">
+            <div class="box">
                 <div class="img">
                     <img src="./assets/img/platagl.jpg" alt="hrana">
                 </div>
@@ -214,7 +214,7 @@
                 </div>
                 <button class="btn"></button>
             </div>
-            <div class="box" data-aos="fade-right">
+            <div class="box">
                 <div class="img">
                     <img src="./assets/img/salata.jpg" alt="hrana">
                 </div>
@@ -227,7 +227,7 @@
                 </div>
                 <button class="btn"></button>
             </div>
-            <div class="box" data-aos="fade-left">
+            <div class="box">
                 <div class="img">
                     <img src="./assets/img/gulas.png" alt="hrana">
                 </div>
@@ -245,7 +245,7 @@
                 </div>
                 <button class="btn"></button>
             </div>
-            <div class="box" data-aos="fade-right">
+            <div class="box">
                 <div class="img">
                     <img src="./assets/img/razanj.jpg" alt="hrana">
                 </div>
@@ -259,7 +259,7 @@
                 </div>
                 <button class="btn"></button>
             </div>
-            <div class="box" data-aos="fade-left">
+            <div class="box">
                 <div class="img">
                     <img src="./assets/img/hrana5.jpg" alt="hrana">
                 </div>
