--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d44598.202930138345!2d16.031082289865843!3d45.68319136389558!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476687529e9ea1e3%3A0xcfd3d4f3042e634e!2sRestoran%20Za%20va%C5%A1u%20du%C5%A1u!5e0!3m2!1sen!2shr!4v1621868042201!5m2!1sen!2shr" loading="lazy" style="border: 5px solid crimson"></iframe>
         </div>
         <footer>
-            <span> <span class="far fa-copyright"></span> 2021 All rights reserved <span style="color:crimson;text-decoration: underline;">za-vašu-dušu.hr</span> | Design by <a href="http://xn--tomislavbui-vlb28i.com/">Tomislav Bušić</a></span>
+            <span> <span class="far fa-copyright"></span> 2021 All rights reserved <span style="color:crimson;text-decoration: underline;">za-vašu-dušu.hr</span> | Design by <a href="https://tomislav-busic.web.app/">Tomislav Bušić</a></span>
         </footer>
     </section>
 
